--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 							  <p class="lead">
 								Welcome to my page! I am a student of Software Engineering.
 							  </p>
-							  <a href="https://www.linkedin.com/in/jelena-banjac/"><i class="fab fa-linkedin" style="font-size:24px"></i></a>
+							  <a href="https://www.linkedin.com/in/jelena-banjac/" target="_blank"><i class="fab fa-linkedin" style="font-size:24px"></i></a>
 
-							  <a href="https://gitlab.com/jelena-b94"><i class="fab fa-github" style="font-size:24px"></i></a>
+							  <a href="https://gitlab.com/jelena-b94" target="_blank"><i class="fab fa-github" style="font-size:24px"></i></a>
 							  
 							  <a href="mailto:jelena.b94@example.com?Subject=Hello"><i class="fas fa-envelope" style="font-size:24px"></i></a>
 							</div>
@@ -48,7 +48,7 @@
 							<table class="table table-hover">
 							  <thead>
 								<tr class="table-info" scope="row">
-								  <th scope="col" style="min-width: 180px">Date</th>
+								  <th scope="col" style="min-width: 190px">Date</th>
 								  <th scope="col">Experience</th>
 								  <th scope="col">Location</th>
 								</tr>
@@ -59,7 +59,7 @@
 									April 2017 - June 2018
 								  </th>
 								  <td>
-									<h6><b>CERN Technical Student</b></h6>
+									<h6><b><a href="https://home.cern/" target="_blank">CERN</a> Technical Student</b></h6>
 									<p>BE-RF-FB, LHC Experiment</p>
 									<b>Project: Developing Expert Tools for the LHC</b>
 									<p>Developing software tools in Python for automated, precision setting-up of low-power level radio frequency (LLRF) loops, which will help expert users to have better control and faster setting-up of the radio-frequency (RF) system in the Large Hadron Collider (LHC) experiment. The aim was to completely redesign the software architecture, to add new features, to improve certain algorithms, and to increase the automation. – Supervisor: Helga Timko.</p>
@@ -72,7 +72,7 @@
 									July 2016 - September 2016
 								  </th>
 								  <td>
-									  <h6><b>CERN OpenLab Summer Student</b></h6>
+									  <h6><b><a href="https://home.cern/" target="_blank">CERN</a> OpenLab Summer Student</b></h6>
 									  <p>EP-LBC, LHCb Computing Group</p>
 									  <b>Project: FPGA Based Data Smoother for Sensor Data</b>
 									  <p>Tested to use a sensor smoothing algorithm on an FPGA to directly reduce the noise on raw sensor data in general. Algorithm is implemented on a modern Cyclon V SOC FPGA using HDLs. – Supervisors: Christian Faerber, Jonathan Machen, Jean-Christophe Garnier.</p>
@@ -102,7 +102,7 @@
 							<table class="table table-hover">
 							  <thead>
 								<tr class="table-warning" scope="row">
-								  <th scope="col">Date</th>
+								  <th scope="col" style="min-width: 180px">Date</th>
 								  <th scope="col">Degree</th>
 								  <th scope="col">Location</th>
 								</tr>
@@ -113,8 +113,9 @@
 									June 2013 - October 2017
 								  </th>
 								  <td>
-									<h6><b>BSc degree, Faculty of Technical Sciences, University of Novi Sad</b></h6>
-									<p>Software Engineering and Information Technologies</p>
+									<h6><b>BSc degree, <a href="http://www.ftn.uns.ac.rs/n1386094394/faculty-of-technical-sciences" target="_blank">Faculty of Technical Sciences, University of Novi Sad </a></b></h6>
+									<p><small>Software Engineering and Information Technologies</small></p>
+									<p>Diploma: Bachelor with Honours in Electrical and Computer Engineering (B.El.Comp.Eng)</p>
 								  </td>
 								  <td>Novi Sad, <br/>Serbia</td>
 								</tr>
@@ -124,7 +125,8 @@
 									June 2009 - June 2013
 								  </th>
 								  <td>
-									  <h6><b>Mathematical Gymnasium</b></h6>
+									  <h6><b><a href="https://www.mg.edu.rs/en/" target="_blank">Mathematical Gymnasium</a></b></h6>
+									  <p>Diploma: Diploma on completion of secondary education for gifted students</p>
 								  </td>
 								  <td>Belgrade, <br/>Serbia</td>
 								</tr>
@@ -150,7 +152,7 @@
 				</div>
 				<div class="bs-component">
 					<div class="list-group">
-					  <a href="https://cds.cern.ch/record/2289522" class="list-group-item list-group-item-action flex-column align-items-start">
+					  <a href="https://cds.cern.ch/record/2289522" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
 						<div class="d-flex w-100 justify-content-between">
 						  <h5 class="mb-1">Developing Expert Tools for the LHC</h5>
 						  <small>October 10, 2017</small>
@@ -158,7 +160,7 @@
 						<p class="mb-1"></p>
 						<small>Bachelor Thesis</small>
 					  </a>
-					  <a href="https://zenodo.org/record/159419" class="list-group-item list-group-item-action flex-column align-items-start">
+					  <a href="https://zenodo.org/record/159419" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
 						<div class="d-flex w-100 justify-content-between">
 						  <h5 class="mb-1">FPGA Based Data Smoother for Sensor Data</h5>
 						  <small>October 5, 2016</small>
