--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 		<!-- Latest compiled JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		
+		<!-- Icons -->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+		
+		<!-- Favicon -->
+		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 	</head>
 	
 	<body>
