add link to favicon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
 		
 		<!-- Favicon -->
-		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/JelenaBanjac/JelenaBanjac.github.io/master/favicon.ico"/>
 	</head>
 	
 	<body>
