--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<title>Jelena Banjac</title>
+		
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css">
 
