--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 		
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/JelenaBanjac/JelenaBanjac.github.io/master/favicon.ico"/>
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120893520-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-120893520-1');
+		</script>
+
 	</head>
 	
 	<body>
