--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
 		<title>Jelena Banjac</title>
 		
 		<!-- Latest compiled and minified CSS -->
