--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<div class="col-lg-6 col-md-6">
 									<h3 class="display-4">Hi, I'm <br/>Jelena Banjac</h3>
 									<p class="lead">
-										Welcome to my page! I am a student of Software Engineering.
+										Welcome to my page! <br>I am a student playing with data at the moment.
 									</p>
 									<br/>
 									<div class="row" style="left: 50%;display: flex;align-items: center;justify-content: center">
