--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 									<div class="row" style="left: 50%;display: flex;align-items: center;justify-content: center">
 										<!-- Linkedin -->
-										<a href="https://www.linkedin.com/in/jelena-banjac/" target="_blank"><i class="fab fa-linkedin" style="padding-left: 10px;font-size:45px"></i></a>
+										<a href="https://www.linkedin.com/in/JelenaBanjac" target="_blank"><i class="fab fa-linkedin" style="padding-left: 10px;font-size:45px"></i></a>
 										<!-- Github -->
 										<a href="https://github.com/JelenaBanjac" target="_blank"><i class="fab fa-github" style="padding-left: 10px;font-size:45px"></i></a>
 										<!-- GItlab -->
