change og content

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta property="og:url"                content="http://JelenaBanjac.com" />
 		<meta property="og:type"               content="portfolio" />
 		<meta property="og:title"              content="Jelena Banjac" />
-		<meta property="og:description"        content="Welcome to my page! I am a student of Software Engineering." />
-		<meta property="og:image"              content="https://lh3.googleusercontent.com/Bbay9S7A-l00DpvYksNd8K9gblwX1NX6LUckWCpvzNv8p7lmfD_0sKiOWw0K2wE2WU7TloZ4niw3MmA_sgrfPHcOXuEArM0D-BvyhD2sXnzuaK9iyboCzNjZW0u9v1GgnJD1gL-yoSEWrmdLBOYrJe2O48iwg8dtapXhrIjDMa3HXq8mkggPpxwRl1B475BVP4BT5RJ9T8SUSpX2cs1S7f40fhbz3NRHJzJmdyVj-dLAJsiJcHzJ8ECEe4ErZx93cKp4Um0nujBaC3-1au358R70yIVCypm8YEwyVkcp3jvlCUpsczzb-bPzzhqR_C3x8wKMCwmOq1k4CMxX24Sj_ptaeCkjyqm3eNkWDplnieKp_SjbIyBlFKh9VRoxrdF6eM4s2b7Onvzmyi1EbWWAYK_KwUPuZvIH9WG5XrJ7t_J_2Y5NoH8P05KoNtLHrWzvOq_Zv_MnjsH3-IqcqGdRIAGHnWK4N25ZL1F0SjhE14Jp0lO3KAFGRLc2Z6ma_TZ9UJOGYfMe4NfZTU09QIKgR5BYTjE_HR1fNOZCYxYNR-8zj7JOlhlx4F6boDEJK8znmzSMBHg4p-Hv_9iDsmqrgCMckMBf8_Kw5c_Tve4=w932-h620-no" />
+		<meta property="og:description"        content="Welcome to my page! I am a student playing with data at the moment." />
+		<meta property="og:image"              content="images/jelenabanjac_animation.gif" />
 
 		<title>Jelena Banjac</title>
 		
