--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<!-- GItlab -->
 										<a href="https://gitlab.com/JelenaBanjac" target="_blank"><i class="fab fa-gitlab" style="padding-left: 10px;font-size:45px"></i></a>
 										<!-- Email -->
-										<a href="mailto:jelena.b94@gmail.com?Subject=Hello"><i class="fas fa-envelope" style="padding-left: 10px;font-size:45px"></i></a>
+										<a href="mailto:msjelenabanjac@gmail.com?Subject=Hello"><i class="fas fa-envelope" style="padding-left: 10px;font-size:45px"></i></a>
 									</div>
 
 								</div>
