add google verification

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 	<head>
-		<meta name="viewport" 								 content="width=device-width, initial-scale=1">
+		<meta name="viewport" 								 content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+		<meta name="keywords" 								 content="jelena, banjac, jelena banjac, novi sad, ftn, epfl">
+		<meta name="google-site-verification"  content="6esuaFJ0gCplXQhSOn62fLpSxSSpqfEC4nmqAsxTGYY" />
+
 		<meta property="og:url"                content="http://JelenaBanjac.com" />
 		<meta property="og:type"               content="portfolio" />
 		<meta property="og:title"              content="Jelena Banjac" />
+		<meta property="og:site_name" 				 content="Jelena Banjac" />
 		<meta property="og:description"        content="Welcome to my page! I am a student playing with data at the moment." />
 		<meta property="og:image"              content="images/jelenabanjac_animation.gif" />
 
