add yandex verif

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta name="yandex-verification" content="fcb43c549e96d398" />
 		<meta name="description" 							 content="Welcome to my page! I am a student playing with data at the moment.">
 		<meta name="viewport" 								 content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 		<meta name="keywords" 								 content="jelena, banjac, jelena banjac, novi sad, ftn, epfl">
