--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 								<div class="col-lg-6 col-md-6">
 									<img src="images/jelenabanjac_animation.gif" alt="Avatar" style="border-radius:50%;margin-top:30;display: block; margin-left: auto; margin-right: auto; " width=310px height=250px>
 									<br />
-									<div class="row" style="left: 50%;display: flex;align-items: center;justify-content: center">
+									<!-- <div class="row" style="left: 50%;display: flex;align-items: center;justify-content: center">
 										<a href="files/CV-JelenaBanjac-20181004-EN.pdf" download></a>
 											<a class="btn btn-primary btn-lg" href="files/CV-JelenaBanjac-20181006-EN.pdf" target="_blank" role="button">Download CV</a>
 										</a>
-									</div>
+									</div> -->
 								</div>
 
 							</div>
