--- a/index.html
+++ b/index.html
@@ -105,9 +105,6 @@
 			})});
 
 		</script>
-
-
-
 	</head>
 	
 	<body>
@@ -233,7 +230,7 @@
 										September 2018 - Present
 										</th>
 										<td>
-										<h6><b>MSc degree, <a href="https://epfl.ch/" target="_blank">École polytechnique fédérale de Lausanne (EPFL) </a></b></h6>
+										<h6><b>MSc degree, <a href="https://epfl.ch/" target="_blank">Swiss Federal Institute of Technology (EPFL) </a></b></h6>
 										<p><small>Data Science</small></p>
 										<p>Diploma: Master of Science MSc in Data Science</p>
 										</td>
