add google scholar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 		
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -130,6 +131,9 @@
 										<a href="https://github.com/JelenaBanjac" target="_blank"><i class="fab fa-github" style="padding-left: 10px;font-size:45px"></i></a>
 										<!-- GItlab -->
 										<a href="https://gitlab.com/JelenaBanjac" target="_blank"><i class="fab fa-gitlab" style="padding-left: 10px;font-size:45px"></i></a>
+										<!-- Google Scholar -->
+										<a href="https://scholar.google.com/citations?hl=en&user=xo-8YjYAAAAJ" target="_blank"><i class="ai ai-google-scholar-square ai-3x" style="padding-left: 10px;font-size:50px"></i></a>
+										
 										<!-- Email -->
 										<a href="mailto:msjelenabanjac@gmail.com?Subject=Hello"><i class="fas fa-envelope" style="padding-left: 10px;font-size:45px"></i></a>
 									</div>
