--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:title"              content="Jelena Banjac | Student of Data Science" />
 		<meta property="og:site_name" 				 content="Jelena Banjac" />
 		<meta property="og:description"        content="Welcome to my page! My name is Jelena Banjac and I am a student playing with data at the moment." />
-		<meta property="og:image"              content="images/jelenabanjac_animation.gif" />
+		<meta property="og:image"              content="images/photo_2020-01-17_15-52-31.jpg" />
 
 		<title>Jelena Banjac | Student of Data Science</title>
 		
@@ -141,7 +141,7 @@
 								</div>
 								
 								<div class="col-lg-6 col-md-6">
-									<img src="images/jelenabanjac_animation.gif" alt="Avatar" style="border-radius:50%;margin-top:30;display: block; margin-left: auto; margin-right: auto; " width=310px height=250px>
+									<img src="images/photo_2020-01-17_15-52-31.jpg" alt="Avatar" style="border-radius:50%;margin-top:30;display: block; margin-left: auto; margin-right: auto; " width=310px height=250px>
 									<br />
 									<!-- <div class="row" style="left: 50%;display: flex;align-items: center;justify-content: center">
 										<a href="files/CV-JelenaBanjac-20181004-EN.pdf" download></a>
