--- a/index.html
+++ b/index.html
@@ -428,7 +428,8 @@
 							  
 							    <div class="card-body">
 									<a href="files/team_6.pdf" target="_blank" class="card-link">Report</a>
-									<a href="#TODO" target="_blank" class="card-link">Presentation</a>
+									<a href="https://github.com/Movinder/movielens-imdb-exploration/blob/master/Team6-Movinder-FinalPresentation.pdf" target="_blank" class="card-link">Presentation</a>
+									<a href="https://docs.google.com/presentation/d/e/2PACX-1vQOphKqgKL38Ra1a2zdb-in-ToHGb3wQh73b4pNipEnJnoHH-ZsrLByUtAV8yJ3UJTI00ECx6nfra0d/pub?start=false&loop=false&delayms=3000&slide=id.g6dcb38e7ff_1_30" target="_blank" class="card-link">Slides</a>
 									<a href="https://github.com/Movinder" target="_blank" class="card-link">Code</a>
 									<a href="https://movinder.herokuapp.com/" target="_blank" class="card-link">Website</a>
 							    </div>
