--- a/index.html
+++ b/index.html
@@ -874,8 +874,21 @@
 			</div>
 			
 			<br />
+
+			<div class="bs-docs-section">
+				<div class="bs-component" style="left: 50%;display: flex;align-items: center;justify-content: center">
+					<div class="row">
+						<div>Test</div>
+						<div class="center col-lg-12 col-md-12 col-sm-12">
+							<a href="https://clustrmaps.com/site/1b3fl"  title="Visit tracker"><img src="http://www.clustrmaps.com/map_v2.png?d=PGU4vSit-SEWtY9KnHRs3C1O2UGRwkiv-OttUp-CtDs&cl=ffffff" /></a>
+							<br /> <br/>
+						</div>
+					</div>
+				</div>
 			
+			</div>
 		</div>
 
-	</body>
+
+		</body>
 </html>
