--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 			
 			<br />
 
-			<div class="bs-docs-section">
+			<!-- <div class="bs-docs-section">
 				<div class="bs-component" style="left: 50%;display: flex;align-items: center;justify-content: center">
 					<div class="row">
 						<div class="center col-lg-12 col-md-12 col-sm-12">
@@ -885,7 +885,7 @@
 					</div>
 				</div>
 			
-			</div>
+			</div> -->
 		</div>
 
 
