--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									  February 2020 - May 2020
 									</th>
 									<td>
-									  <h6><b><a href="https://home.cern/" target="_blank">EPFL</a> Student Researcher</b></h6>
+									  <h6><b><a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> Student Researcher</b></h6>
 									  <p>Biomedical Imaging Group (BIG)</p>
 									  <b>Project: 3D Poses Recovery in Single-Particle Cryo-EM from Learned Pairwise Projection Distances
 									</b>
@@ -250,7 +250,7 @@
 										<td>
 										<h6><b>MSc degree, <a href="https://epfl.ch/" target="_blank">Swiss Federal Institute of Technology (EPFL) </a></b></h6>
 										<p><small>Data Science</small></p>
-										<p>Diploma: Master of Science MSc in Data Science</p>
+										<p>Pursuing diploma: Master of Science MSc in Data Science</p>
 										</td>
 										<td>Lausanne, <br />Switzerland</td>
 									</tr>
