--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<title>Jelena Banjac | Student of Data Science</title>
 		
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css">
+		<link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 		
 		<!-- jQuery library -->
@@ -30,6 +30,26 @@
 		
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/png" href="images/jb-favicon.ico"/>
+
+		<!-- Custom CSS-->
+		<style>
+			a {
+				color: #a497b5;
+			}
+			.table-info, .table-info>th, .table-info>td {
+				background-color: #cdc9d8;
+				color: #502c61;
+			}
+			.alert-info {
+				color: #502c61;
+				background-color: #cdc9d8;
+				border-color: #e2cfec;
+			}
+			a:hover {
+				color:#502c61;
+			}
+			
+		</style>
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120893520-1"></script>
@@ -80,19 +100,17 @@
 			window.cookieconsent.initialise({
 				"palette": {
 					"popup": {
-						"background": "#000"
+						"background": "#a497b5"
 					},
 					"button": {
-						"background": "#f1d600"
+						"background": "#502c61"
 					}
 				},
-				"theme": "classic",
+				"theme": "cosmo",
 				"position": "top",
-				"type": "opt-out",
 				"content": {
-					"message": "This website uses cookies to ensure you get the best experience on this website.",
+					"message": "I am collecting data from you (professional deformation).",
 					"dismiss": "Got it!",
-					"deny": "Decline",
 					"link": "Learn more",
 					"href": 'http://cookiesandyou.com',
 					"close": '&#x274c;',
@@ -110,7 +128,7 @@
 	
 	<body>
 		<div class="container">
-			<br />
+			<br /><br/><br/>
 			<!-- Introduction -->
 			<div class="bs-docs-section">
 
@@ -236,7 +254,7 @@
 						<div class="bs-component">
 							<table class="table table-hover">
 							  <thead>
-								<tr class="table-warning" scope="row">
+								<tr class="table-info" scope="row">
 								  <th scope="col">Date</th>
 								  <th scope="col">Degree</th>
 								  <th scope="col">Location</th>
@@ -333,7 +351,7 @@
 					<div class="center col-lg-6 col-md-6">
 						<div class="bs-component">
 							<div class="card mb-3">
-								<h3 class="card-header alert-danger">3D Poses Recovery in Single-Particle Cryo-EM from Learned Pairwise Projection Distances</h3>
+								<h3 class="card-header alert-info">3D Poses Recovery in Single-Particle Cryo-EM from Learned Pairwise Projection Distances</h3>
 								<div class="card-body">
 								<h6 class="card-subtitle text-muted">Semester project</h6>
 								</div>
@@ -396,7 +414,7 @@
 					<div class="center col-lg-6 col-md-6">
 						<div class="bs-component">
 							<div class="card mb-3">
-							    <h3 class="card-header alert-success">Movinder: A Movie Recommendation System for Groups</h3>
+							    <h3 class="card-header alert-info">Movinder: A Movie Recommendation System for Groups</h3>
 							    <div class="card-body">
 								    <h6 class="card-subtitle text-muted"><a href="https://github.com/mdeff/ntds_2019">A Network Tour of Data Science</a> course project</h6>
 							    </div>
@@ -586,7 +604,7 @@
 					<div class="center col-lg-6 col-md-6">
 						<div class="bs-component">
 							<div class="card mb-3">
-							    <h3 class="card-header alert-warning">Exploring Comics</h3>
+							    <h3 class="card-header alert-info">Exploring Comics</h3>
 							    <div class="card-body">
 								    <h6 class="card-subtitle text-muted"><a href="https://edu.epfl.ch/coursebook/en/data-visualization-COM-480">Data Visualization</a> course project</h6>
 							    </div>
@@ -650,7 +668,7 @@
 					<div class="center col-lg-6 col-md-6">
 						<div class="bs-component">
 							<div class="card mb-3">
-								<h3 class="card-header alert-danger">Brain Segmentation</h3>
+								<h3 class="card-header alert-info">Brain Segmentation</h3>
 								<div class="card-body">
 								<h6 class="card-subtitle text-muted">Semester project</h6>
 								</div>
@@ -707,7 +725,7 @@
 					<div class="center col-lg-6 col-md-6">
 						<div class="bs-component">
 							<div class="card mb-3">
-							    <h3 class="card-header alert-success">Developing Expert Tools for the Large Hadron Collider (LHC)</h3>
+							    <h3 class="card-header alert-info">Developing Expert Tools for the Large Hadron Collider (LHC)</h3>
 							    <div class="card-body">
 								    <h6 class="card-subtitle text-muted">CERN Technical Student Project</h6>
 							    </div>
@@ -824,7 +842,7 @@
 					<div class="center col-lg-6 col-md-6">
 						<div class="bs-component">
 							<div class="card mb-3">
-							    <h3 class="card-header alert-warning">FPGA Based Data Smoother for Sensor Data</h3>
+							    <h3 class="card-header alert-info">FPGA Based Data Smoother for Sensor Data</h3>
 							    <div class="card-body">
 								  <h6 class="card-subtitle text-muted">CERN OpenLab Project</h6>
 							    </div>
