--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
 						"background": "#502c61"
 					}
 				},
-				"theme": "cosmo",
+				"theme": "Cosmo",
 				"position": "top",
+				"type": "opt-out",
 				"content": {
-					"message": "I am collecting data from you (professional deformation).",
+					"message": "Professional deformation: I am collecting data from you.",
 					"dismiss": "Got it!",
+					"deny": "Decline",
 					"link": "Learn more",
 					"href": 'http://cookiesandyou.com',
 					"close": '&#x274c;',
