--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				"position": "top",
 				"type": "opt-out",
 				"content": {
-					"message": "Professional deformation: I am collecting data from you.",
+					"message": "This website is using cookies.",
 					"dismiss": "Got it!",
 					"deny": "Decline",
 					"link": "Learn more",
