--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
 			<div class="bs-docs-section">
 
 					<div class="bs-component" style="left: 50%;display: flex;align-items: center;justify-content: center">
-						<div class="jumbotron" style="min-width:346; max-width: 730;">
+						<div class="jumbotron" style="min-width:346; max-width: 730; background:none">
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
 									<h3 class="display-4">Hi, I'm <br />Jelena Banjac</h3>
-									
+									<br/>
 									<p class="lead">
 										Welcome to my page! <br>I am a student playing with data at the moment.
 									</p>
-
-									<div class="row" style="left: 50%;display: flex;align-items: center;justify-content: center">
+									<br/>
+									<div class="row" style="display: flex;align-items: left;justify-content: left">
 										<!-- Linkedin -->
 										<a href="https://www.linkedin.com/in/JelenaBanjac" target="_blank"><i class="fab fa-linkedin" style="padding-left: 10px;font-size:45px"></i></a>
 										<!-- Github -->
