--- a/index.html
+++ b/index.html
@@ -197,7 +197,21 @@
 							  <tbody>
 								<tr class="table-light">
 									<th scope="row">
-									  Oct 2020 - Feb 2020
+									  Mar 2021 - Present
+									</th>
+									<td>
+									  <h6><b><a href="https://www.campusbiotech.ch/en/node/272" target="_blank">Blue Brain Project</a> Deep Learning</b></h6>
+									  <p>Machine Learning & Neuromathematics</p>
+									  <b>Project: Deep Learning on Neuronal Morphologies
+									</b>
+									  
+									</td>
+									<td>Geneva, Switzerland</td>
+								  </tr>
+
+								<tr class="table-light">
+									<th scope="row">
+									  Oct 2020 - Feb 2021
 									</th>
 									<td>
 									  <h6><b><a href="https://www.nestle.com/" target="_blank">Nestlé</a> Bioinformatics Analyst</b></h6>
@@ -382,15 +396,15 @@
 										<div class="carousel-item active">
 											<img class="d-block" style="height: 300px; display: block; margin-left:auto; margin-right: auto;" src="images/protein_1.jpg" alt="Card image">
 										</div>
-										<div class="carousel-item">
+										<!-- <div class="carousel-item">
 											<img class="d-block" style="height: 300px; display: block; margin-left:auto; margin-right: auto;" src="images/protein_2.png" alt="Card image">
-										</div>
-										<div class="carousel-item">
+										</div> -->
+										<!-- <div class="carousel-item">
 											<img class="d-block" style="height: 300px; display: block; margin-left:auto; margin-right: auto;" src="images/protein_3.png" alt="Card image">
-										</div>
+										</div>--> 
 										<div class="carousel-item">
 											<img class="d-block" style="height: 300px; display: block; margin-left:auto; margin-right: auto;" src="images/protein_4.png" alt="Card image">
-										</div>
+										</div> 
 										<div class="carousel-item">
 											<img class="d-block" style="height: 300px; display: block; margin-left:auto; margin-right: auto;" src="images/protein_5.gif" alt="Card image">
 										</div>
