--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 	<head>
 		<meta name="yandex-verification" content="fcb43c549e96d398" />
-		<meta name="description" 							 content="Welcome to my page! My name is Jelena Banjac and I am a student playing with data at the moment.">
+		<meta name="description" 							 content="Welcome to my page! My name is Jelena Banjac and I am a data scientist playing with data at the moment.">
 		<meta name="viewport" 								 content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 		<meta name="keywords" 								 content="jelena, banjac, jelena banjac, novi sad, ftn, epfl, data scientist">
 		<meta name="google-site-verification"  content="6esuaFJ0gCplXQhSOn62fLpSxSSpqfEC4nmqAsxTGYY" />
 
 		<meta property="og:url"                content="http://JelenaBanjac.com" />
 		<meta property="og:type"               content="portfolio" />
-		<meta property="og:title"              content="Jelena Banjac | Student of Data Science" />
+		<meta property="og:title"              content="Jelena Banjac | Data Scientist" />
 		<meta property="og:site_name" 				 content="Jelena Banjac" />
-		<meta property="og:description"        content="Welcome to my page! My name is Jelena Banjac and I am a student playing with data at the moment." />
+		<meta property="og:description"        content="Welcome to my page! My name is Jelena Banjac and I am a data scientist playing with data at the moment." />
 		<meta property="og:image"              content="images/photo_2020-01-17_15-52-31.jpg" />
 
-		<title>Jelena Banjac | Student of Data Science</title>
+		<title>Jelena Banjac | Data Scientist</title>
 		
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
@@ -151,7 +151,7 @@
 									<h3 class="display-4">Hi, I'm <br />Jelena Banjac</h3>
 									<br/>
 									<p class="lead">
-										Welcome to my page! <br>I am a student playing with data at the moment.
+										Welcome to my page! <br>I am a data scientist playing with data at the moment.
 									</p>
 									<br/>
 									<div class="row" style="display: flex;align-items: left;justify-content: left">
@@ -207,10 +207,38 @@
 							  <tbody>
 								<tr class="table-light">
 									<th scope="row">
+									  Mar 2022 - present
+									</th>
+									<td>
+										<h6><b><a href="https://htecgroup.com/" target="_blank">HTEC Group</a> Data Scientist</b></h6>
+										<p>Data Group</p>
+										<b>Project: Optical Character Recognition
+									</b>
+									  
+									</td>
+									<td>Novi Sad, Serbia (remote)</td>
+								</tr>
+
+								<tr class="table-light">
+									<th scope="row">
+									  Nov 2021 - Mar 2022
+									</th>
+									<td>
+										<h6><b><a href="https://www.nestle.com/" target="_blank">Nestlé</a> Data Analyst Consultant</b></h6>
+										<p>Research & Development, Host-Microbiome</p>
+										<b>Project: Microbiome Toolbox
+									</b>
+									  
+									</td>
+									<td>Lausanne, Switzerland (remote)</td>
+								</tr>
+
+								<tr class="table-light">
+									<th scope="row">
 									  Mar 2021 - Aug 2021
 									</th>
 									<td>
-									  <h6><b><a href="https://www.campusbiotech.ch/en/node/272" target="_blank">Blue Brain Project</a> Deep Learning</b></h6>
+									  <h6><b><a href="https://www.campusbiotech.ch/en/node/272" target="_blank">Blue Brain Project</a> Deep Learning Engineer</b></h6>
 									  <p>Machine Learning & Neuromathematics</p>
 									  <b>Project: Deep Learning on Neuronal Morphologies
 									</b>
@@ -308,7 +336,7 @@
 										<td>
 										<h6><b>MSc degree, <a href="https://epfl.ch/" target="_blank">Swiss Federal Institute of Technology (EPFL) </a></b></h6>
 										<p><small>Data Science</small></p>
-										<p>Pursuing diploma: Master of Science MSc in Data Science</p>
+										<p>Diploma: Master of Science MSc in Data Science</p>
 										</td>
 										<td>Lausanne, <br />Switzerland</td>
 									</tr>
