--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 		<meta property="og:url"                content="http://JelenaBanjac.com" />
 		<meta property="og:type"               content="portfolio" />
-		<meta property="og:title"              content="Jelena Banjac | Data Scientist" />
-		<meta property="og:site_name" 				 content="Jelena Banjac" />
-		<meta property="og:description"        content="Welcome to my page! My name is Jelena Banjac and I am a data scientist playing with data at the moment." />
+		<meta property="og:title"              content="Jelena Banjac Lukić | Data Scientist" />
+		<meta property="og:site_name" 				 content="Jelena Banjac Lukić" />
+		<meta property="og:description"        content="Welcome to my page! My name is Jelena Banjac Lukić and I am a data scientist playing with data at the moment." />
 		<meta property="og:image"              content="images/photo_2020-01-17_15-52-31.jpg" />
 
-		<title>Jelena Banjac | Data Scientist</title>
+		<title>Jelena Banjac Lukić | Data Scientist</title>
 		
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
@@ -158,7 +158,7 @@
 						<div class="jumbotron" style="min-width:346; max-width: 730; background:none">
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
-									<h3 class="display-4">Hi, I'm <br />Jelena Banjac</h3>
+									<h3 class="display-4">Hi, I'm <br />Jelena Banjac Lukić</h3>
 									<br/>
 									<p class="lead">
 										Welcome to my page! <br>I am a data scientist playing with data at the moment.
