--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						<div class="jumbotron" style="min-width:346; max-width: 730; background:none">
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
-									<h3 class="display-4">Hi, I'm <br />Jelena Banjac Lukić</h3>
+									<h3 class="display-4">Hi, I'm <br />Jelena</h3>
 									<br/>
 									<p class="lead">
 										Welcome to my page! <br>I am a data scientist playing with data at the moment.
